--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
                 <a href="#" class="button">Home</a>
             </header>-->
             <div class="row game_header">
-                <div class="col-sm-2">
+                <div class="col-sm-12 col-md-4">
                     <img src="img/logo.png" />
                 </div>
-                <div class="col-sm-1"></div>
 
-                <div class="col-sm-9">
+                <div class="col-sm-12 col-md-8">
                     <h1>{{message}}</h1>
                     <p>
                         A quiz game with questions from the <i>"Open Trivia"</i> database. <br>
@@ -51,7 +50,7 @@
             <div class="row game">
                 
                 <!-- Category Selection -->
-                <div class="col-sm-3">
+                <div class="col-sm-12 col-md-3">
                     <ul id="categories-list">
                         <li class="category-group" 
                             v-for="group in categoryGroups"
@@ -74,7 +73,7 @@
                 </div>
                 
                 <!-- question and answers and buttons -->
-                <div id="answers" class="col-sm-6">
+                <div id="answers" class="col-sm-12 col-md-6">
                     <div class="question"   id="question">
                         <h2><i class="fas fa-question"></i>&nbsp;{{category}}&nbsp;<i class="fas fa-question"></i></h2>
                         <h3><span v-html="question"></span></h3>
@@ -100,7 +99,7 @@
                 </div>
 
                 <!-- result -->
-                <div class="col-sm-3" id="result">
+                <div class="col-sm-12 col-md-3" id="result">
                     <div id="resultbox">
                         <i class="fas fa-check-circle" style="font-size:48px;color:green;" v-if="showCheck"></i>
                         <i class="fas fa-times-circle" style="font-size:48px;color:red;" v-if="showTimes"></i>
